--- a/ChangeLog
+++ b/ChangeLog
@@ -15,35 +15,36 @@
 	* source/options.c: Add .scop reader compatible with clan output.
 	
 	* tests/exam98.dep,
-	* tests/matvect.candl,
-	* tests/swim.dep,
-	* tests/gemver.scop,
 	* tests/esced.dep,
 	* tests/exam98.candl,
 	* tests/ics06.dep,
+	* tests/matvect.candl,
+	* tests/esced.candl,
+	* tests/ics06.candl,
+	* tests/cc1.dep,
+	* tests/relaxation.dep,
+	* tests/relaxation.candl,
+	* tests/cc1.candl,
+	* tests/matvect.dep: Delete old test files.
+
+	* tests/swim.dep,
+	* tests/gemver.scop,
 	* tests/ax-do.struct,
 	* tests/swim.candl,
 	* tests/swim.struct,
-	* tests/esced.candl,
-	* tests/ics06.candl,
 	* tests/matmul.dep,
 	* tests/ax-do.scop,
-	* tests/cc1.dep,
-	* tests/relaxation.dep,
 	* tests/checker.sh,
 	* tests/ax-do.dep,
 	* tests/matmul.candl,
 	* tests/matmul.struct,
 	* tests/swim.scop,
-	* tests/relaxation.candl,
-	* tests/cc1.candl,
 	* tests/gemver.dep,
 	* tests/check_suite.sh,
 	* tests/matmul.scop,
 	* tests/gemver.candl,
 	* tests/gemver.struct,
-	* tests/Makefile.am,
-	* tests/matvect.dep: New. Create working test suite.
+	* tests/Makefile.am: New. Create working test suite.
 	
 2008-07-13  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
