--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-20  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* include/candl/dependence.h,
+	* include/candl/matrix.h,
+	* include/candl/program.h: Minor fixes in includes.
+
 2008-08-07  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 	This patch creates a .scop dumper for candl. Dependences are
 	represented between the
