git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@15591 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-09-18  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+	Enable Candl to act as a .scop to .candl converter.
+
+	* include/candl/program.h,
+	* source/program.c: Add candl_program_print_candl_file function,
+	which dumps a .candl file from a candl_program_t structure.
+
+	* include/candl/options.h,
+	* source/options.c,
+	* source/candl.c: Add support of option -scoptocandl, which
+	converts a .scop to a .candl file.
+
 2008-08-20  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* include/candl/dependence.h,
