git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@16465 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-10-17  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* include/candl/matrix.h,
+	* source/matrix.c: Add candl_matrix_print_data, which prints a
+	matrix in a parsable form for candl_matrix_read.
+	* include/candl/candl.h.in: Update CANDL_FMT to %4...
+
+	* source/program.c: Replace calls to pip_matrix_print by
+	candl_matrix_print_data. The former caused bugs on ppc64.
+
 2008-09-18  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 	Enable Candl to act as a .scop to .candl converter.
 
