git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@16632 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-01  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* Makefile.am: Remove useless re-copy of config/fm.m4 in dist-hook.
+
 2008-10-17  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* include/candl/matrix.h,
