--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-31  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* include/candl/matrix.h: Support new clan_int_t type.
+
 2008-11-01  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* Makefile.am: Remove useless re-copy of config/fm.m4 in dist-hook.
