fixes for compilation with gmp - there is no longer a mpz_add_si, instead use mpz_sub_ui for CANDL_decrement; replace some of the Entier assignments with CANDL_assign; substract -> subtract
git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@19252 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-03-21  Uday K Bondhugula <bondhugula.1@osu.edu>
+	Small fixes for gmp compilation.
+
+	* source/dependence.c
+	* source/matrix.c
+	* include/candl/candl.h.in
+
 2009-02-07  Uday K Bondhugula <bondhugula.1@osu.edu>
 	Computes last writer on RAW, WAW, RAR dependences. Long 
 	standing implementation finally committed. Last writer 
