git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@21041 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* source/program.c,
+	* source/dependence.c,
+	* include/candl/candl.h.in,
+	* include/candl/program.h,
+	* configure.in,
+	* autoconf/candl.m4: Change optional dependence from clan to
+	scoplib, for the support of .scop as input format.
+	
 2009-03-21  Uday K Bondhugula <bondhugula.1@osu.edu>
 	Small fixes for gmp compilation.
 
