git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@26429 d2347644-e8e6-0310-9099-9a715ae17836

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,11 @@
-* Written by Cedric Bastoul <cedric.bastoul@inria.fr>
-* Maintained by Louis-Noel Pouchet <louis-noel.pouchet@inria.fr>
+* * * * * 
+* Candl * 
+* * * * * 
+
+Version 0.3.0
+
+Current maintainer: 
+* Louis-Noel Pouchet <louis-noel.pouchet@inria.fr>
+
+Author of Candl: 
+* Cedric Bastoul <cedric.bastoul@inria.fr>
