git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@28214 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-01-26  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* source/statement.c,
+	* source/program.c,
+	* include/candl/candl.h.in: FINALLY! change 'affectation' to
+	'assigment'.
+
 2010-01-22  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* source/program.c,
