git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@28396 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-05  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/matrix.c,
+	* source/violation.c,
+	* source/dependence.c: Minor code polishing fixes.
+
 2010-01-26  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* source/statement.c,
