--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in: Bump to Candl 0.4.0
+	* README: New. Mini readme file.
+
 2010-02-05  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/matrix.c,
