--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/dependence.c: Implement missing feature for last-writer.
+
 2010-03-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* configure.in: Bump to Candl 0.4.0
