git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@30385 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/program.c: Fix a bug in Scop to Candl conversion.
+
 2010-04-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/dependence.c: Implement missing feature for last-writer.
