git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@36165 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2011-02-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
+	* source/dependence.c: Fix a potential bug in
+	candl_dependence_compute_lb.
+
+2011-02-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
 	* tests/matmul.scalstruct,
 	* tests/ax-do.struct,
 	* tests/matmul.depscop,
