git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@36201 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/ddv.c: Fix a bug in DDV computation.
+
 2011-02-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/dependence.c: Fix a potential bug in
