git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@36209 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-15  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* include/candl/ddv.h,
+	* source/ddv.c: Add storage for the dependence type associated to
+	a DDV (e.g., RAW, WAR, WAW or RAR).
+
 2011-02-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/ddv.c: Fix a bug in DDV computation.
