git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@36239 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-16  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* autoconf/candl.m4: Fix a potential configuration issue with GMP
+	and ISL, when multiple incompatible versions of GMP are already
+	installed on the system.
+
 2011-02-15  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* include/candl/ddv.h,
