git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@37422 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/candl.c: Fix a minor option parsing incompatibility when
+	using both -inscop and -scoptocandl.
+
 2011-02-16  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* autoconf/candl.m4: Fix a potential configuration issue with GMP
