git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@37760 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* include/candl/ddv.h,
+	* source/ddv.c: Add function candl_loops_are_permutable.
+
 2011-04-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/candl.c: Fix a minor option parsing incompatibility when
