--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in,
+	* autoconf/candl.m4: Use AC_SEARCH_LIBS instead of AC_CHECK_LIB.
+
 2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* include/candl/ddv.h,
