--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/ddv.c: Use rational point check in PIPLib, because of
+	scalability issues observed (polyopt/cholesky-tile+ddv).
+
 2011-05-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* configure.in,
