git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@38469 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in: Bump to Candl 0.5.1.
+
+	* source/dependence.c: Fix a conservativeness issue in
+	candl_dependence_is_loop_carried.
+
 2011-06-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/ddv.c: Use rational point check in PIPLib, because of
