git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@38483 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in: Bump to Candl 0.6.0. Add --enable-piplib-hybrid.
+
+	* source/matrix.c,
+	* source/dependence.c: Conditionally use piplib-hybrid
+	functionality to test polyhedron emptiness.
+
 2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* configure.in: Bump to Candl 0.5.1.
