--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
+	* source/dependence.c: Improve is_loop_carried test.
+
+2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
 	* configure.in: Bump to Candl 0.6.0. Add --enable-piplib-hybrid.
 
 	* source/matrix.c,
