git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@38646 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-07-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/dependence.c: Fix a remaining bug in is_loop_carried.
+
 2011-07-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/dependence.c: Fix a minor bug in is_loop_carried test.
