git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@39470 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/candl.c: Fix incorrect condition for inscop/outscop
+	option.
+
 2011-07-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* include/candl/pruning.h,
