git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42350 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-02-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* source/dependence.c: Fix a bug in compute_lb (used in scalar
+	privatization detection).
+
 2011-09-14  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* source/candl.c: Fix incorrect condition for inscop/outscop
