git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42353 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2012-02-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
+	* include/candl/piplib-wrapper.h: New. Header for the wrapper.
+	* source/dependence.c,
+	* source/ddv.c,
+	* include/Makefile.am: Update accordingly.
+
+2012-02-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
 	* configure.in: Bump to 0.6.1.
 	* source/piplib-wrapper.c: New. PIPLib hybrid/non-hybrid wrapper.
 	* include/candl/dependence.h,
