git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42367 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-02-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in,
+	* source/piplib-wrapper.c,
+	* source/matrix.c: Fix support of piplib non-hybrid.
+
 2012-02-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* include/candl/piplib-wrapper.h: New. Header for the wrapper.
