git-svn-id: https://alchemy.saclay.inria.fr/svn/users/bastoul/candl/trunk@42547 d2347644-e8e6-0310-9099-9a715ae17836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2012-03-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* configure.in: Bump to candl-0.6.2.
+	* include/candl/candl.h.in: Create a new dependence type,
+	CANDL_RAW_SCALPRIV. It is used only for RAW that has been modified
+	due to scalar privatization pruning pass.
+	* source/pruning.c: Update accordingly.
+	* source/dependence.c: Update, and fix two bugs in scalar
+	privatization.
+
 2012-02-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* configure.in,
