--- a/README
+++ b/README
@@ -15,6 +15,19 @@ $> make
 $> make install
 
 
+Alternative: Install with CMake
+-------------------------------
+
+$> mkdir build
+$> cd build
+$> cmake .. # -DCMAKE_INSTALL_PREFIX="/your/install/directory"
+$> make
+$> make test
+$> # make install # sudo make install # su -c "make install"
+$> make doc
+$> make doxygen
+
+
 Support
 -------
 
