--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 Install
 -------
 
-To install candl, PIPLib must be installed. Optionally, scoplib must
+To install candl, PIPLib must be installed. Optionally, OpenScop library must
 be installed to enable SCoP support.
 
 $> ./configure --with-piplib=/path/to/piplib/install --with-scoplib=/path/to/scoplib/install
@@ -14,6 +14,19 @@ $> make
 
 $> make install
 
+
+Alternatively, to use bunled PIPLib and  OpenScop library, follow following command
+sequence:
+
+$> ./get_submodules.sh
+
+$> ./autogen.sh
+
+$> ./configure --with-piplib=bundled --with-scoplib=bundled
+
+$> make
+
+$> make install
 
 Alternative: Install with CMake
 -------------------------------
